--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "gh-pages": "^6.3.0",
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.1",
-    "vite": "^6.0.7"
+    "vite": "^6.0.11"
   }
 }
